[gd_scene load_steps=30 format=2]

[ext_resource path="res://Sprites/Wizard/jump/Sprite-0002.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Wizard/jump/Sprite-0001.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Wizard/Run/Run-0007.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Wizard/Run/Run-0006.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Wizard/Run/Run-0005.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Wizard/Idle/WizardIdle-0001.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Wizard/jump/Sprite-0004.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Wizard/Run/Run-0001.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Wizard/Run/Run-0003.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Wizard/Run/Run-0009.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Wizard/Run/Run-0002.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Wizard/Run/Run-0008.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Wizard/Run/Run-0004.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Wizard/jump/Sprite-0003.png" type="Texture" id=14]
[ext_resource path="res://Scenes/Player.gd" type="Script" id=15]
[ext_resource path="res://Sprites/Wizard/wallslide/Sprite-0002.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Wizard/wallslide/Sprite-0003.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Wizard/wallslide/Sprite-0001.png" type="Texture" id=18]
[ext_resource path="res://Chain.tscn" type="PackedScene" id=19]
[ext_resource path="res://Scenes/ScreenShaker.gd" type="Script" id=20]
[ext_resource path="res://Scenes/Gun.tscn" type="PackedScene" id=21]
[ext_resource path="res://Scenes/Trail.tscn" type="PackedScene" id=22]
[ext_resource path="res://Sounds/PickupCoin.wav" type="AudioStream" id=23]
[ext_resource path="res://WhiteLight.png" type="Texture" id=24]
[ext_resource path="res://Slash.tscn" type="PackedScene" id=25]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 15.25 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0.336364 ), 0.0, 0.0, 0, 0, Vector2( 0.240566, 0.445455 ), 0.626364, 0.626364, 0, 0, Vector2( 0.448113, 0.681818 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=4]
colors = PoolColorArray( 0, 0, 0, 0, 0.10994, 0.182134, 0.511719, 1 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 1.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": false,
"name": "wallSlide",
"speed": 8.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 11 ), ExtResource( 9 ), ExtResource( 13 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 12 ), ExtResource( 10 ) ],
"loop": true,
"name": "run",
"speed": 13.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 1 ), ExtResource( 14 ), ExtResource( 7 ) ],
"loop": false,
"name": "jump",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D"]
collision_mask = 36
script = ExtResource( 15 )

[node name="Chain" parent="." instance=ExtResource( 19 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 2.248 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true
smoothing_speed = 2.5

[node name="ScreenShaker" type="Node" parent="Camera2D"]
script = ExtResource( 20 )

[node name="FrontMiddleRay" type="RayCast2D" parent="."]
position = Vector2( 6, -1 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 16520

[node name="Gun" parent="." instance=ExtResource( 21 )]
show_behind_parent = true
position = Vector2( 0, -3 )
offset = Vector2( 18, 0 )

[node name="RayCast2D" type="RayCast2D" parent="Gun"]
position = Vector2( -3.33333, 0 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 150 )

[node name="Slash" parent="Gun" instance=ExtResource( 25 )]
show_behind_parent = true
position = Vector2( 27, 3 )

[node name="Timer" type="Timer" parent="."]

[node name="Trail" parent="." instance=ExtResource( 22 )]
modulate = Color( 0.65, 0.66, 0.62, 1 )
position = Vector2( 0, -2.632 )
points = PoolVector2Array( 135, 43.632 )
width = 8.0
width_curve = SubResource( 3 )
gradient = SubResource( 4 )
targetPath = NodePath("..")
trailLength = 10

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
light_mask = 2
position = Vector2( -1.54972e-06, 4.10301e-07 )
frames = SubResource( 1 )
animation = "idle"
playing = true

[node name="YSort" type="YSort" parent="."]

[node name="CoinPickup" type="AudioStreamPlayer" parent="YSort"]
stream = ExtResource( 23 )
volume_db = -20.0

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 24 )
texture_scale = 0.7
color = Color( 0.235294, 0.607843, 0.486275, 1 )
shadow_enabled = true
